# literature-research-automation-tool

./: .pre-commit-config.yaml  database_embedder.py  database_inspector.py  main.py  pyproject.toml  search_embedding.ipynb
